add TitleSubtitleCellViewModel add TitleSubtitleCell add TableView prototype on AddEventViewController (append methods for TableView know to draw on the screen and assign a data source)

--- a/HairData/HairData/Base.lproj/Main.storyboard
+++ b/HairData/HairData/Base.lproj/Main.storyboard
@@ -31,9 +31,24 @@
                     <view key="view" contentMode="scaleToFill" id="f13-Rl-UDt">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="fVp-zA-YMU">
+                                <rect key="frame" x="0.0" y="47" width="390" height="763"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="kTX-l3-Ohw"/>
-                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="kTX-l3-Ohw" firstAttribute="trailing" secondItem="fVp-zA-YMU" secondAttribute="trailing" id="Jrg-P0-mcd"/>
+                            <constraint firstItem="fVp-zA-YMU" firstAttribute="top" secondItem="kTX-l3-Ohw" secondAttribute="top" id="g9Q-wm-z9a"/>
+                            <constraint firstItem="kTX-l3-Ohw" firstAttribute="bottom" secondItem="fVp-zA-YMU" secondAttribute="bottom" id="iLk-2N-pof"/>
+                            <constraint firstItem="fVp-zA-YMU" firstAttribute="leading" secondItem="kTX-l3-Ohw" secondAttribute="leading" id="zQu-pY-Ymb"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="fVp-zA-YMU" id="tgG-sK-TrI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="etp-aI-Xgs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -41,8 +56,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
